k8s/migrate.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-migrate
spec:
  restartPolicy: Never
  containers:
    - name: django-migrate
      image: django_app:latest
      imagePullPolicy: Never
      command: ["python", "manage.py", "migrate"]
